Do not wrap text in tags on small devices, fixes #ORG-1974

--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -44,6 +44,10 @@ form .required label:after {
 }
 
 /* ********* Text *****************/
+.label {
+	white-space: nowrap;
+}
+
 pre {
 	background-color: #DDDDDD;
 }
